# fastapi-todolist

./: .gitignore  pyproject.toml
app/: __main__.py  dependencies.py  events_handling.py  schemas.py
app/db/: init_db.py  models.py
app/endpoints/: __init__.py  todo_endpoints.py
app/main/: __init__.py  app.py  config.py
app/protocols/: todo_repository_protocol.py
app/services/: base_repository.py  todo_repository.py
tests/: test_todo.py
tests/mocks/: mock_todo_repository.py
tests/test_endpoints/: test_todo_endpoints.py
